# glossa

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: CLAUDE.md
data-prep/: pyproject.toml
data-prep/glossa_data_prep/: __init__.py  cli.py
data-prep/glossa_data_prep/sources/: __init__.py  phoible.py  wikipron.py
data-prep/phogra_data_prep/: __init__.py  cli.py  reconcile.py
data-prep/phogra_data_prep/sources/: phoible.py  wikipron.py
scripts/: deploy.sh
src/: App.tsx  index.css  main.tsx
src/components/: AppShell.tsx  AudioStatusToast.tsx  Tabs.tsx
src/features/chart/: IpaConsonantChart.tsx  IpaVowelChart.tsx  Suprasegmentals.tsx
src/features/fun-facts/: FunFacts.tsx
src/features/grapheme-detail/: GraphemeDetail.tsx
src/features/grapheme-tab/: GraphemeTab.tsx
src/features/mapping-graph/: BipartiteGraph.tsx  ForceLayout.tsx  MappingGraph.tsx  WordChainStrip.tsx
src/features/phoneme-detail/: PhonemeDetail.tsx
src/hooks/: useAudio.ts  useData.ts
src/lib/: data.ts  features.ts
src/lib/graph/: bipartite.ts  wordChain.ts
src/lib/ipa/: audio.ts  consonants.ts  inventoryOverlay.ts  normalize.ts  vowels.ts
src/routes/: ComparePage.tsx  Home.tsx  LanguagePage.tsx  Languages.tsx
src/schemas/: index.ts
src/store/: audio.ts
