[project]
name = "phogra-data-prep"
version = "0.1.0"
description = "Data pipeline for phogra — downloads & transforms PHOIBLE, WikiPron, Wikimedia Commons audio into JSON bundles."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "requests>=2.31",
    "argh>=0.31",
    "pydantic>=2.5",
    "tqdm>=4.66",
]

[project.scripts]
phogra-data-prep = "phogra_data_prep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phogra_data_prep"]
